fixed overflow bug

--- a/src/css/404.css
+++ b/src/css/404.css
@@ -1,7 +1,3 @@
-html {
-    overflow: hidden;
-}
-
 .landscape {
     position: absolute;
     top: 0px;
